# DRRC

./: .buildinfo  .gitignore  CHANGELOG.html  CHANGELOG.md  LICENSE  README.md  format_code.sh  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: CHANGELOG.doctree  index.doctree
.doctrees/manual/: analysis.doctree  cluster.doctree  contributing.doctree  generating_data.doctree  index.doctree  installation.doctree  manuscript.doctree  open_questions.doctree  testing.doctree
.github/workflows/: deploy.yml  formatting.yml  testing.yml
Analysis/: Manuscript_Fig-Dimensionality_Reduction.py  Manuscript_Fig-FinalComparison.py  Manuscript_Fig-FinalResults.py  Manuscript_Fig-Only_Parallel_Reservoirs.py  Manuscript_Fig-RelativePerformance.py  Manuscript_Fig-TimeSeries.py  Process_ValidTime.py  Visualise_Profiling.py
Docs/: README.md
Docs/source/: conf.py  index.rst  run_autodoc.py
Scripts/: Pretrain_PCA_FFT.py  README.md  parallelreservoir_trail.py
Scripts/1D_KuramotoSivashinsky/: DataCreation_KS.yml  generate_TrainingAndEval.py  generate_ks_data.py
Scripts/2D_AlievPanfilov/: DataCreation_AP.yml  generate_TrainingAndEval.py  (+5 more)
Tests/: deprecated_test_DR_Trafo_extension.py  mantest_parallelreservoirs.py  test_analysis.py  test_config.py  test_parallelreservoirs.py  test_reservoircomputer.py
_modules/: index.html
manual/: analysis.html  cluster.html  contributing.html  generating_data.html  index.html  installation.html  manuscript.html  open_questions.html  testing.html
(+149 files in other folders)
